--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "creator-approval-portal",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -27,13 +27,16 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@squircle-js/react": "^1.2.18",
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jose": "^5.9.6",
+    "layout-debug-tool": "^2.0.0",
     "lucide-react": "^0.534.0",
+    "motion": "^12.23.12",
     "next": "15.4.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
