--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "2.15.4",
+    "sharp": "^0.34.3",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
