--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "biome check --write"
   },
   "dependencies": {
+    "@automattic/number-formatters": "^1.0.12",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
