--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "motion": "^12.23.12",
     "next": "15.4.4",
     "next-themes": "^0.4.6",
+    "quill-delta-to-react": "^1.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-mentions": "^4.4.10",
