--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@sentry/nextjs": "^10.17.0",
     "@squircle-js/react": "^1.2.18",
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.83.0",
