--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "creator-approval-portal",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "pnpm test:ci && next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "biome check --write"
+    "format": "biome check --write",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:ci": "vitest --run"
   },
   "dependencies": {
     "@automattic/number-formatters": "^1.0.12",
@@ -58,14 +63,23 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query-devtools": "^5.83.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-mentions": "^4.4.1",
+    "@vitejs/plugin-react": "^5.0.4",
+    "@vitest/ui": "3.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
+    "happy-dom": "^19.0.2",
+    "jsdom": "^27.0.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.2.4"
   }
 }
