--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turboback",
     "build": "pnpm test:ci && next build",
     "start": "next start",
     "lint": "next lint",
@@ -52,7 +52,7 @@
     "react-dom": "19.1.0",
     "react-mentions": "^4.4.10",
     "recharts": "2.15.4",
-    "sharp": "^0.34.3",
+    "require-in-the-middle": "^8.0.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
