--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "creator-approval-portal",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turboback",
+    "dev": "next dev --turbopack",
     "build": "pnpm test:ci && next build",
     "start": "next start",
     "lint": "next lint",
