FIx Sentry integration and improve small UI behavior
[WIP] still testing image CND provider

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "creator-approval-portal",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "private": true,
   "type": "module",
   "scripts": {
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@automattic/number-formatters": "^1.0.12",
+    "@imagekit/next": "^2.1.3",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
